<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".legal.LegalActivity"
       tools:ignore="MissingPrefix">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="4dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/attribution_header"
                android:textAppearance="?android:attr/textAppearanceMediumInverse"/>

            <TextView
                android:text="@string/attribution"
                fontPath="fonts/arial.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text"/>

            <TextView
                android:text="@string/attribution_parse"
                fontPath="fonts/arial.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text"/>

            <TextView
                android:text="@string/attribution_calligraphy"
                fontPath="fonts/arial.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="4dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text"/>

            <TextView
                android:text="@string/attribution_circular"
                fontPath="fonts/arial.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="4dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text"/>

            <TextView
                android:text="@string/attribution_asset_studio"
                fontPath="fonts/arial.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="4dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text"/>

            <TextView
                android:text="@string/attribution_commons"
                fontPath="fonts/arial.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="4dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text"/>

            <TextView
                android:text="@string/attribution_signpost"
                fontPath="fonts/arial.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="4dp"
                android:paddingBottom="8dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</merge>
