<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.TalkDetailsFragment"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:minHeight="64dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:background="@drawable/bg_purple">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceLargeInverse"/>

        <ImageButton
            android:id="@+id/favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/favorite"
            android:focusable="false"
            android:padding="8dp"
            android:background="@android:color/transparent"
            android:visibility="gone"
            android:src="@drawable/ic_rating_not_important_light"/>

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/logistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/xcs_gray_light"
        android:paddingBottom="4dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="4dp">

        <TextView
            android:id="@+id/time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:text="@string/start_date_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/header_text"/>

        <TextView
            android:id="@+id/time"
            calligraphy="fonts/FuturaStd-Heavy.otf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/time_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/header_text"/>

        <TextView
            android:id="@+id/room_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/time_label"
            android:layout_marginRight="4dp"
            android:text="@string/room_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/header_text"/>

        <TextView
            android:id="@+id/room"
            calligraphy="fonts/FuturaStd-Heavy.otf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/time_label"
            android:layout_toRightOf="@id/room_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/header_text"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/talk_abstract"
                calligraphy="fonts/arial.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="2sp"
                android:paddingBottom="8dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/running_text"/>

            <TextView
                android:id="@+id/speakers_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/xcs_gray_light"
                android:paddingBottom="4dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="4dp"
                android:text="@string/speakers_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/header_text"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
