<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    tools:ignore="MissingPrefix">

    <!-- SPEAKER IMAGE: left aligned, centered vertically -->
    <com.xebia.xebicon2014.util.CircularParseImageView
        android:id="@+id/speakerimage"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerVertical="true"
        android:layout_marginRight="8dp"
        app:border="false" />

    <!-- TALK TITLE: between speaker image and favorite button -->
    <!-- 2dp top margin to center the two info lines in the layout -->
    <TextView
        android:id="@+id/title"
        calligraphy="fonts/FuturaStd-Heavy.otf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_toLeftOf="@+id/favorite_button"
        android:layout_toRightOf="@+id/speakerimage"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- TIME LABEL: next to speaker image, below title -->
    <TextView
        android:id="@+id/start_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginRight="4dp"
        android:layout_toRightOf="@+id/speakerimage"
        android:text="@string/start_date_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <!-- ROOM LABEL: next to time label, below title -->
    <!-- 64dp left margin save space for time value -->
    <TextView
        android:id="@+id/room_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="4dp"
        android:layout_toRightOf="@+id/start_date_label"
        android:text="@string/room_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <!-- TIME VALUE: next to time label -->
    <!-- max 60dp wide so it does not overlap room label -->
    <TextView
        android:id="@+id/start_date"
        calligraphy="fonts/FuturaStd-Heavy.otf"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_toRightOf="@+id/start_date_label"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <!-- ROOM VALUE: next to room label -->
    <!-- left aligned with favorite button to prevent overlap -->
    <TextView
        android:id="@+id/room"
        calligraphy="fonts/FuturaStd-Heavy.otf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_toLeftOf="@+id/favorite_button"
        android:layout_toRightOf="@+id/room_label"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <!-- FAVORITE BUTTON: left aligned, centered vertically -->
    <ImageButton
        android:id="@+id/favorite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="#00000000"
        android:contentDescription="@string/favorite"
        android:focusable="false"
        android:padding="8dp"
        android:src="@drawable/light_rating_not_important" />

</RelativeLayout>
